# testi-qt

./: main.cpp  main.qml  meson.build  play.pro  qmlsink-dyn-added.qrc  qtlink.txt
